// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`creates a component with a 3d card effect on hover 1`] = `
<DocumentFragment>
  <div
    class="card-3d"
    data-testid="hover-3d-card"
  >
    <p>
      Hover3dCard
    </p>
  </div>
</DocumentFragment>
`;

exports[`subtley rotates the card with a 3d effect on mouse over 1`] = `
<DocumentFragment>
  <div
    class="card-3d"
    data-testid="hover-3d-card"
    style="transform: perspective(0px) rotateX(Infinitydeg) rotateY(-Infinitydeg) scale3d(1, 1, 1);"
  >
    <p>
      Hover3dCard
    </p>
  </div>
</DocumentFragment>
`;
